# Alpha-Omega-Cyber-Attack

./: .gitignore  404.html  index.html  pyproject.toml  sitemap.xml
docs/: README.md
search/: search_index.json
src/agents/: n8n_workflow.json
src/aws/: connection.sh
src/client_app/: main.py
src/fuzz-and-datapreproc/: scan_all.sh  shell.nix  top_level_scan.sh  zap.yaml
src/fuzz-and-datapreproc/outputs/: ffuf_dirs.json  ffuf_param.json  ffuf_sanitized.json  juice_index.html  nmap_3000_verbose_no_sudo  nmap_full.txt  nmap_localhost_3000.txt  ps_top.txt  uploads_listing_raw.txt  whatweb.json  whatweb.txt
src/fuzz-and-datapreproc/outputs/extra/: _mini_wordlist.txt  docker_ps.txt  headers_login.txt  ss_listeners.txt  uploads_listing_raw.txt
src/fuzz-and-datapreproc/outputs/ready_for_sanitizer/: manifest.txt  nikto.txt  nmap_full.xml  resp_snippet.txt
src/fuzz-and-datapreproc/outputs1/: ffuf_dirs.json  ffuf_param.json  nikto.txt  nmap_full.xml  run_timestamp.txt  top_level_scan.sh
src/fuzz-and-datapreproc/outputs1/outputs/: run_timestamp.txt
src/fuzz-and-datapreproc/outputs1/send_for_sanitizer/: _mini_wordlist.txt  nmap_full.txt  whatweb.json  whatweb.txt
src/our_app/: main.py
src/snowflake_scripts/sql/: createTable.sql  dropTable.sql  viewTable.sql
